RESOLVED FIXED308990
[GStreamer][1.28] media/video-setSinkId-default.html times out
https://bugs.webkit.org/show_bug.cgi?id=308990
Summary [GStreamer][1.28] media/video-setSinkId-default.html times out
Philippe Normand
Reported 2026-03-02 10:14:18 PST
Created attachment 478541 [details] gdb log I see it deadlock here, I'm not sure yet if this is a regression from 1.26 or not.
Attachments
gdb log (144.56 KB, text/plain)
2026-03-02 10:14 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2026-03-15 10:58:36 PDT
EWS
Comment 2 2026-03-16 02:53:46 PDT
Committed 309312@main (236253608289): <https://commits.webkit.org/309312@main> Reviewed commits have been landed. Closing PR #60662 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-16 02:54:12 PDT
Note You need to log in before you can comment on or make changes to this bug.