Cherry-pick 309312@main (236253608289). https://bugs.webkit.org/show_bug.cgi?id=308990

[GStreamer][1.28] media/video-setSinkId-default.html times out
    https://bugs.webkit.org/show_bug.cgi?id=308990

    Reviewed by Xabier Rodriguez-Calvar.

    Starting with GStreamer 1.28 the device monitor loads the pipewire device provider first (if it's
    available of course) which then hides the pulseaudio device provider. Unfortunately pipewire audio
    sink devices created by that provider tend to deadlock, so disable that device provider for the time
    being. Pipewire issue:

    https://gitlab.freedesktop.org/pipewire/pipewire/-/issues/5171

    That should already be done on test bots using the GST_PLUGIN_FEATURE_RANK environment variable but
    it currently doesn't handle device providers. This is fixed by this merge request:

    https://gitlab.freedesktop.org/gstreamer/gstreamer/-/merge_requests/11035

    * Source/WebCore/platform/graphics/gstreamer/GRefPtrGStreamer.h:
    * Source/WebCore/platform/graphics/gstreamer/GStreamerCommon.cpp:
    (WebCore::registerWebKitGStreamerElements):

    Canonical link: https://commits.webkit.org/309312@main

Canonical link: https://commits.webkit.org/298234.498@webkitglib/2.50